--- a/package.json
+++ b/package.json
@@ -4,25 +4,26 @@
     "description": "Sustainable Farming and Market Dynamics: A Holistic Management System for Agricultural Sacco Development",
     "main": "backend/server.js",
     "scripts": {
-      "start": "node backend/server.js",
-      "server": "nodemon backend/server.js",
-      "dev": "nodemon backend/server.js"
+        "start": "node backend/server.js",
+        "server": "nodemon backend/server.js",
+        "dev": "nodemon backend/server.js"
     },
     "author": "CS Team Project",
     "license": "MIT",
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "express-fileupload": "^1.4.0",
-      "jsonwebtoken": "^9.0.0",
-      "mongoose": "^7.0.3",
-      "morgan": "^1.10.0",
-      "multer": "^1.4.5-lts.1",
-      "nodemailer": "^6.9.1"
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "express-fileupload": "^1.5.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.8.6",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.10.0"
     },
     "devDependencies": {
-      "nodemon": "^2.0.22"
-    }
-  }
+        "nodemon": "^2.0.22"
+    },
+    "keywords": []
+}
