--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/agri-sacco
+# MONGO_URI=mongodb://localhost:27017/agri-sacco
+MONGO_URI=mongodb+srv://shaphii:tOrx1lAi08bDJ389@cluster0.a4pvc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRE=30d
 NODE_ENV=development
